WIP Add Ollama client"